--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -13,29 +13,37 @@
   <string name="app_setting_privacy_policy">Tietosuojakäytäntö</string>
   <string name="app_setting_search">Hakupalkki</string>
   <string name="app_setting_xiaoai">Mi AI-painike</string>
+  <string name="app_suggest_detail_setting_summary">Sovellusehdotukset pohjautuu käyttötietoihisi</string>
+  <string name="app_suggest_detail_setting_title">Salli sovellusten tilan käyttö</string>
+  <string name="app_suggest_setting_brief">Näytä viimeksi käytetyt sovellukset</string>
+  <string name="app_suggest_setting_brief_detail">Sovellusehdotukset pohjautuu käyttötietoihisi</string>
+  <string name="app_suggest_setting_title">Sovellusehdotukset</string>
   <string name="book_his">Varaushistoria</string>
   <string name="book_input_lack">Täytä ensin kaikki vaaditut alueet</string>
   <string name="book_save_fail">Varausta ei voitu lisätä. Yritä uudelleen.</string>
   <string name="book_save_sucess">Varaus lisättiin onnistuneesti</string>
   <string name="didi_app_name">DiDi</string>
   <string name="express_setting_other">Muu</string>
+  <string name="miot_cta_dialog_title">Salli valtuutus</string>
+  <string name="miot_del_dialog_cancel">Säilytä</string>
+  <string name="miot_del_dialog_sure">Poista</string>
+  <string name="miot_delete_dialog_content">Voit palauttaa Mi Home -kortin Sovellusholvin asetuksissa.</string>
+  <string name="miot_delete_dialog_title">Poistetaan Mi Home -korttia</string>
   <string name="miot_device_add_device">Lisää laite</string>
   <string name="miot_device_all_device">Kaikki laitteet</string>
   <string name="miot_device_cancel">Peruuta</string>
   <string name="miot_device_card_title">Mi Home</string>
-  <string name="miot_device_click_show_detail">.(Napauta lisätietoja älykkäistä kodinkoneista)</string>
-  <string name="miot_device_click_show_img">Näytä kuva napauttamalla</string>
+  <string name="miot_device_click_show_detail">(Napauta lisätietoja älykkäistä kodin laitteista)</string>
   <string name="miot_device_cta_and"> ja </string>
   <string name="miot_device_cta_end">. (</string>
-  <string name="miot_device_cta_message">Lisää älylaitteitasi hallitaksesi niitä. Hyväksy napauttamalla Valtuuta </string>
-  <string name="miot_device_cta_priv">Tietosuojakäytäntö</string>
+  <string name="miot_device_cta_message">Lisää älylaitteitasi hallitaksesi niitä. Hyväksy napauttamalla Valtuuta</string>
+  <string name="miot_device_cta_priv">Tietosuojakäytäntö.</string>
   <string name="miot_device_cta_use_info">Mi Home Käyttöehdot</string>
   <string name="miot_device_edit">Muokkaa</string>
-  <string name="miot_device_empty_device_hint">Lisää älylaitteita, kuten ilmanpuhdistajia, kameroita ja robotti-imureita nopeaa ohjausta varten</string>
+  <string name="miot_device_edit_device">Järjestä laitteita uudelleen</string>
   <string name="miot_device_empty_text">Lisää ilmanpuhdistaja, kamera, robotti-imuri tai muista älylaitteita hallitaksesi niitä.</string>
-  <string name="miot_device_hide_frame_toast">Piilota kuva</string>
   <string name="miot_device_install_mijia">Lataa</string>
-  <string name="miot_device_introduction">Ohjaa nopeasti älylaitteita</string>
+  <string name="miot_device_introduction">Ohjaa nopeasti älylaitteita (Katso pyyhkäisemällä Sovellusholvissa alaspäin)</string>
   <string name="miot_device_loading">Ladataan…</string>
   <string name="miot_device_login">Kirjaudu sisään</string>
   <string name="miot_device_mijia_logout_message">Sinun täytyy kirjautua sisään Mi Tililläsi, ennen kuin voit lisätä tai käyttää laitteita. Haluatko kirjautua sisään nyt?</string>
@@ -43,13 +51,6 @@
   <string name="miot_device_mijia_uninstall_message">Mi Home sovellusta ei ole asennettu. Haluatko ladata sen sovelluskaupasta?</string>
   <string name="miot_device_mijia_uninstall_title">Ei asennettu</string>
   <string name="miot_device_network_error">Ei yhteyttä</string>
-  <string name="miot_device_no_recent_frame">Näytä napauttamalla</string>
-  <string name="miot_device_personal_assistant_eula">Käyttöehdot</string>
-  <string name="miot_device_personal_assistant_eula_priv">" ja Sovellusholvin "</string>
-  <string name="miot_device_personal_assistant_priv">Tietosuojakäytäntö</string>
-  <string name="miot_device_show_frame_toast">Näytä kuva</string>
-  <string name="miot_device_shrink_list">Tiivistä</string>
-
   <string name="net_unavailable">Verkkoyhteyttä ei voitu muodostaa.</string>
   <!-- MIUI 10 valmis -->
   <string name="access_change_text" formatted="false">当前选中的是第%d项, 与第%d项交换位置.</string>
@@ -105,6 +106,7 @@
   <string name="alipay_sdk_payed_success">Maksettiin onnistuneesti</string>
   <string name="alipay_sdk_tiemout">Istunto vanhentui. Kirjaudu sisään uudelleen.</string>
   <string name="alipay_template_month_dialog_cancel">Peruuta</string>
+  <string name="all_function_title">Kaikki pikakuvakkeet</string>
   <string name="app_label">Sovellusholvi</string>
   <string name="apps">Suositellut sovellukset</string>
   <string name="apps_label">Sovellukset</string>
@@ -259,16 +261,22 @@
   <string name="corpus_description_apps">Asennetut sovellukset</string>
   <string name="corpus_hint_apps">Hae sovelluksia</string>
   <string name="corpus_label_apps">Sovellukset</string>
-  <string name="cta_desc">Se on ideaalinen pikakuvakkeille, tiedoille ja suosikkiominaisuuksillesi</string>
+  <string name="cta_desc">Kaikki tärkeät toiminnot yhdessä paikassa</string>
   <string name="cta_dialog_miot_text_all">Varmistaaksemme, että se toimii normaalisti, Mi Home saattaa joutua hankkimaan verkkosi, sijaintisi, valtuutuksen Bluetoothin käyttöönottamiseksi, käyttämään matkapuhelinverkkoasi, mikrofonia ja lukemaan yhteystietojasi. Vahvistatko?</string>
   <string name="cta_dialog_negative">Poistu</string>
   <string name="cta_dialog_positive">Hyväksyn</string>
   <string name="cta_dialog_text_all">Käyttääksesi Sovellusholvia sinun täytyy lukea ja hyväksyä %1$s\"Käyttöehdot\" %2$s ja %3$s \"Tietosuojakäytännön\" %4$s. Palvelu vaatii myös internetyhteyden ja pääsyn sijaintipalveluihin. Joidenkin palveluiden käyttämä sisällön kerääjä vaatii myös internetyhteyden. Hyväksytkö?</string>
+  <string name="cta_dialog_text_new_user">"Ennen Sovellusholvin käyttämistä, sinun täytyy hyväksyä Xiaomin %1$s\"Käyttöehdot\"%2$s, %3$s\"Tietosuojakäytäntö\"%4$s, ja %5$s\"Sovellusholvin Tietosuojakäytäntö\"%6$s. Sovellusholvin on yhdistettävä internetiin ja saatava sijaintitietosi toimiakseen normaalisti. Napauta \"Aloita\" hyväksyäksesi."</string>
+  <string name="cta_dialog_text_old_user">Ennen Sovellusholvin käyttämistä, sinun täytyy hyväksyä %1$s\"Sovellusholvin Tietosuojakäytäntö\"%2$s. Napauta \"Aloita\" hyväksyäksesi.</string>
   <string name="cta_dialog_title">Käyttöehdot</string>
   <string name="cta_negative">Sulje</string>
+  <string name="cta_not_now">Ei nyt</string>
+  <string name="cta_old_not_use">Ei nyt</string>
+  <string name="cta_old_start">Aloita</string>
   <string name="cta_positive">Tiedot</string>
+  <string name="cta_start">Aloita</string>
   <string name="cta_text5">Palvelu myös vaatii internetyhteyden ja pääsyn sijaintipalveluihin. Hyväksytäänkö?</string>
-  <string name="cta_title">Säilytä tärkeät asiat Sovellusholvissa</string>
+  <string name="cta_title">Tervetuloa Sovellusholviin</string>
   <string name="currency_china">CNY</string>
   <string name="daily_greeting">Päivittäinen tervehdys</string>
   <string name="data_error">Tapahtui virhe, odota minuutti tai kaksi ja yritä uudelleen</string>
@@ -317,6 +325,8 @@
   <string name="didi_trip_content_detail">Arvioi likimääräinen hinta taksille ja soita taksi.</string>
   <string name="disclaimer_content">Tämän ominaisuuden tarjoaa %1$s. %1$s kantaa kaiken vastuun tarjoamistaan palveluista. Voit ottaa yhteyttä %1$s, jos sinulla on kysyttävää.</string>
   <string name="disclaimer_title">Vastuuvapauslauseke</string>
+  <string name="display_temperature_default">--℃</string>
+  <string name="display_weather_default">Hae säätiedot napauttamalla</string>
   <string name="drive">Aja</string>
   <string name="duokan_open">Lisää Duokan kortti</string>
   <string name="duokan_setting_brief">Jatka lukemista siitä paikasta, mihin jäit.</string>
@@ -707,6 +717,8 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="list_icon_add">Lisää</string>
   <string name="list_icon_delete">Poista</string>
   <string name="list_icon_drag">Järjestä uudelleen</string>
+  <string name="load_more_error">Tapahtui verkkovirhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
+  <string name="load_no_more">Siinä kaikki tältä erää.</string>
   <string name="loading_desktop">Odota hetki…</string>
   <string name="locating_fail">Sijainnin hakeminen epäonnistui</string>
   <string name="locations">Usein käydyt paikat</string>
@@ -755,6 +767,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="mi_wallet">Mi Wallet</string>
   <string name="midrop_parent">Mi Drop</string>
   <string name="midrop_send">Lähetä</string>
+  <string name="mifare_card">Kortin emulaattori</string>
   <string name="mini_cancel">Peruuta</string>
   <string name="miuishare_account_activate_confirmation">Aktivointi vaaditaan</string>
   <string name="miuishare_account_activate_ok">Aktivoi</string>
@@ -840,7 +853,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="payment_clear_records_success">Maksuhistoria tyhjennettiin</string>
   <string name="payment_date_time_picker_dialog_title">Aseta päivämäärä ja aika</string>
   <string name="payment_guide_hint">Kerää maksutietoja viesteistä ja muista sovelluksista.</string>
-  <string name="payment_guide_hint_link">Tietoturva &amp; yksityisyys</string>
+  <string name="payment_guide_hint_link">\"Sovellusholvin Tietosuojakäytäntö\"</string>
   <string name="payment_method_alipay">Alipay</string>
   <string name="payment_method_bank">Pankkikortti</string>
   <string name="payment_method_cash">Käteinen</string>
@@ -903,8 +916,12 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="plan">Ajastettu</string>
   <string name="preferences">Asetukset</string>
   <string name="preferences_label">Asetukset</string>
+  <string name="preload_empty">Täällä ei ole vielä kohteita. Päivitä vetämällä alaspäin.</string>
   <string name="qq_new">Uusi tila</string>
   <string name="qq_qzone">Qzone</string>
+  <string name="quick_app_setting_brief">Viimeksi käytetyt pikasovellukset (Katso pyyhkäisemällä Sovellusholvissa alaspäin)</string>
+  <string name="quick_app_setting_brief_detail">Katso kaikkia pikasovelluksia, joita olet viimeksi käyttänyt</string>
+  <string name="quick_app_title">Viimeksi käytetyt pikasovellukset</string>
   <string name="quickstart_accessibility_description">Sovellusholvi tarjoaa pikakuvakkeita valituille kolmannen osapuolen sovelluksille. Nämä pikakuvakkeet ei toimi, jos otat ominaisuuden pois käytöstä.</string>
   <string name="quickstart_accessibility_dialog_confirm">Ota käyttöön</string>
   <string name="quickstart_accessibility_dialog_content">Tämä pikakuvake vaatii esteettömyyden ottamista käyttöön.</string>
@@ -916,10 +933,15 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="recharge_title_over">Meni rajan yli</string>
   <string name="recharge_title_remaining">Jäljellä oleva data</string>
   <string name="recharge_title_used">Käytetty tänään</string>
+  <string name="recommend_empty_tip">Täällä ei ole vielä kohteita. Voit lisätä lisää tuotteita.</string>
   <string name="record_name">Uusi nauhoitus</string>
   <string name="record_parent">Ääninauhuri</string>
   <string name="red_dowm_blue_grow">Vihreä - ylös, punainen -alas</string>
   <string name="red_grow_blue_dowm">Punainen ylös, vihreä - alas</string>
+  <string name="refresh_error">Tapahtui verkkovirhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
+  <string name="refresh_over_pull">Päivitä vapauttamalla</string>
+  <string name="refresh_pull">Päivitä vetämällä</string>
+  <string name="refresh_refreshing">Päivitetään…</string>
   <string name="remain_flow">Mobiilitiedonsiirto</string>
   <string name="req_no_data">Tietoja ei saatu</string>
   <string name="req_no_sdata">Tuloksia ei löytynyt</string>
@@ -946,6 +968,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="search_setting_description">Otsikot suosikeissa</string>
   <string name="search_tip">Haetaan…</string>
   <string name="security">Tietoturva</string>
+  <string name="selected_shortcuts_title">Ominaisuudet</string>
   <string name="send_action_title">Lisää suosikkeihin</string>
   <string name="service_unavailiable">Yhdistä verkkoon ja yritä uudelleen.</string>
   <string name="setting_address">Lisää usein käytyjä paikkoja</string>
@@ -1009,10 +1032,30 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="setting_stock_brief_list">Päivittäinen tiedotus</string>
   <string name="setting_switch_toast_close">Maksuja ei tallenneta</string>
   <string name="setting_switch_toast_open">Maksut tallennetaan</string>
+  <string name="setting_title_resident_function">Pysyvät ominaisuudet</string>
   <string name="settings">Asetukset</string>
   <string name="settings_subtitle">Vastaanota ilmoituksia, kun lisäät jotain suosikkeihin</string>
   <string name="settings_title">Ilmoita suosikkeihin lisäämisistä</string>
   <string name="share_title">Jaa URL-osoite käyttäen</string>
+  <string name="shopping_all">Kaikki</string>
+  <string name="shopping_delete_desc">Poista valitut kohteet</string>
+  <string name="shopping_delete_title">Poista kohteita</string>
+  <string name="shopping_depreciate">Alennus ￥%s</string>
+  <string name="shopping_disable">Ostaminen pois käytöstä</string>
+  <string name="shopping_empty_tip">Täällä ei ole mitään</string>
+  <string name="shopping_enable">Ostaminen on käytössä</string>
+  <string name="shopping_label">Ostetaan</string>
+  <string name="shopping_notification_title">Lisättiin ostoksiin</string>
+  <string name="shopping_recommend">Suositellut tuotteet</string>
+  <string name="shopping_recommend_coupon">Kuponki ￥%s</string>
+  <string name="shopping_rmb">￥%s</string>
+  <string name="shopping_search">购物搜索</string>
+  <string name="shopping_setting_authorize">Salli ostojen tietojen vienti</string>
+  <string name="shopping_setting_authorize_sub">Sovellusholvi voi käyttää suosikkeitasi ja ostoskärryn kohteita.</string>
+  <string name="shopping_setting_base">Asetukset</string>
+  <string name="shopping_setting_brief">Kerää ostojesi tiedot Sovellusholviin.</string>
+  <string name="shopping_setting_brief_detail">Kerää ostojesi tiedot Sovellusholviin usealta verkkokauppasovellukselta.</string>
+  <string name="shopping_setting_jingdong">JD</string>
   <string name="shopping_setting_mishop">Mi Kauppa</string>
   <string name="shopping_setting_notification">Ilmoita uusista kohteista</string>
   <string name="shopping_setting_pinduoduo">Pinduoduo</string>
@@ -1097,7 +1140,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="time_just_now">Juuri nyt</string>
   <string name="time_month">d.M.</string>
   <string name="time_year">d.M.yyyy</string>
-  <string name="toast_function_add_not_allowed">Voit lisätä enintään 10 pikakuvaketta</string>
+  <string name="toast_function_add_limit">Voit lisätä enintään %d pikakuvaketta</string>
   <string name="toast_function_remove_not_allowed">Sinun on lisättävä vähintään yksi pikakuvake</string>
   <string name="toast_reach_text_limit_truncate">Muistiosi on liian pitkä. Ylimääräinen sisältö lyhennettiin.</string>
   <string name="total_month_desc_text">Tässä kuussa</string>
