--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -1552,7 +1552,7 @@ Saat lisätietoja järjestelmänvalvojalta."</string>
   <string name="notification_low_battery_action_btn">Ota käyttöön</string>
   <string name="notification_low_battery_need_charge">Akku on vähissä. Lataa laitteesi.</string>
   <string name="notification_low_battery_open_save_mode">Ota Virransäästö käyttöön</string>
-  <string name="notification_low_battery_title">Akku vähissä: %d%%</string>
+  <string name="notification_low_battery_title">Akkua on jäljellä alle %d%%</string>
   <string name="notification_manager">Hallitse ilmoituksia</string>
   <string name="notification_manager_des">Suodata ja hallitse ilmoituksia</string>
   <string name="notification_otg_gamestick_in">Peliohjain yhdistetty</string>
